12/19 프로젝트 업로드 박지언

--- a/Real_Price/src/main/webapp/WEB-INF/web.xml
+++ b/Real_Price/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+xmlns="http://xmlns.jcp.org/xml/ns/javaee" 
+xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
   <display-name>Real_Price</display-name>
   <welcome-file-list>
+  <!-- 1. aliases 설정 -->
+    <!-- <servlet>
+        <servlet-name>Hello</servlet-name>
+        <servlet-class>price.servlet</servlet-class>
+    </servlet>-->
+
+    <!-- 2. 매핑 -->
+    <!--<servlet-mapping>
+        <servlet-name>Hello</servlet-name>
+        <url-pattern>/Hello</url-pattern>
+    </servlet-mapping>-->
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
     <welcome-file>index.jsp</welcome-file>
