--- a/Real_Price/resources/query.properties
+++ b/Real_Price/resources/query.properties
@@ -41,8 +41,7 @@ PRICE_SORT_BY_LOWEST_LOCATION = SELECT * FROM COST_INFO JOIN STORE_INFO ON STORE
 PRICE_AVG = SELECT ROUND(AVG(GOOD_PRICE),2) FROM cost_info WHERE good_id = ?
 PRICE_AVG_LOCATION = SELECT ROUND(AVG(GOOD_PRICE),2) FROM COST_INFO JOIN STORE_INFO ON STORE_INFO.ENTP_ID = COST_INFO.ENTP_ID WHERE good_id = ? AND ENTP_AREA_CODE = ? ORDER BY good_price ASC;
 PRICE_SORT_BY_LOWEST_PRODUCT = SELECT * FROM COST_INFO JOIN PRODUCTS_INFO ON PRODUCTS_INFO.GOOD_ID = COST_INFO.GOOD_ID WHERE GOOD_NAME LIKE '%'||?||'%' ORDER BY GOOD_PRICE ASC
-PRICE_CATEGORY_SEARCH = SELECT * FROM COST_INFO JOIN products_info ON products_info.good_id = COST_INFO.good_id JOIN CATEGORY ON category.good_smlcls_code = products_info.good_smlcls_code WHERE products_info.GOOD_SMLCLS_CODE = ? ORDER BY GOOD_PRICE ASC
-PRICE_TRANSITION = SELECT * FROM TRANSITION
+PRICE_CATEGORY_SEARCH = SELECT * FROM COST_INFO JOIN products_info ON products_info.good_id = COST_INFO.good_id JOIN CATEGORY ON category.good_smlcls_code = products_info.good_smlcls_code WHERE products_info.GOOD_SMLCLS_CODE LIKE ?||'%' ORDER BY GOOD_PRICE ASCPRICE_TRANSITION = SELECT * FROM TRANSITION
 PRICE_SORT_BY_LOWEST_SHOP = SELECT * FROM COST_INFO JOIN STORE_INFO ON STORE_INFO.ENTP_ID = COST_INFO.ENTP_ID WHERE ENTP_NAME LIKE '%'||?||'%'
 GOOD_ID_FROM_PRODUCT = SELECT GOOD_ID FROM PRODUCTS_INFO WHERE GOOD_NAME = ?
 PRODUCT_NAME = SELECT GOOD_NAME FROM PRODUCTS_INFO WHERE GOOD_ID = ?
