--- a/Real_Price/src/main/java/common/query.properties
+++ b/Real_Price/src/main/java/common/query.properties
@@ -1,12 +1,13 @@
 ####################################
 #	QUERY
 ####################################
-// userDAO Query
-selectAll = SELECT * FROM USER ORDER BY ENROLL_DATE DESC
-selectOne = SELECT * FROM USER WHERE USERID = ? ORDER BY DESC
-insertUser = INSERT INTO USER VALUES(?, ?, ?, ?, ?, ?, ?, ?, ?)
-deleteUser = DELETE FROM USER WHERE USERID = ?
-updateUser = UPDATE USER SET USERID = ?, PASSWORD = ?, NAME = ?, AGE = ?, EMAIL = ?, PHONE_NUMBER = ?, ADDRESS = ?
+// MemberDAO Query
+selectAll = SELECT * FROM MEMBER
+selectOne = SELECT * FROM MEMBER WHERE MEMBER_ID = ? ORDER BY DESC
+insertMember = INSERT INTO MEMBER VALUES(?, ?, ?, ?, ?, ?)
+deleteMember = DELETE FROM MEMBER WHERE MEMBER_ID = ?
+updateMember = UPDATE USER SET MEMBER_ID = ?, PASSWORD = ?, NAME = ?, PHONE = ?, ADDRESS = ?, EMAIL = ?
+findMemberById = SELECT * FROM MEMBER WHERE MEMBER_ID=?
 // selectUser = SELECT * FROM USER WHERE USERNAME like ? ORDER BY ENROLL_DATE DESC
 
 
