--- a/Real_Price/src/main/java/common/query.properties
+++ b/Real_Price/src/main/java/common/query.properties
@@ -50,7 +50,8 @@ PRODUCT_NAME = SELECT GOOD_NAME FROM PRODUCTS_INFO WHERE GOOD_ID = ?
 
 // BasketDAO
 BASKET_SELECTALL = SELECT * FROM BASKET
-BASKET_FINDBYINDEX = SELECT B.BASKET_INDEX, B.TOTAL_PRICE, B.MEMBER_ID, B.PICKUP_COMMENT, B.STATUS FROM BASKET B WHERE B.MEMBER_ID=? AND B.BASKET_INDEX=?
+BASKET_FINDBYINDEX = SELECT B.BASKET_INDEX, B.TOTAL_PRICE, B.MEMBER_ID, B.PICKUP_COMMENT, B.STATUS FROM BASKET B WHERE B.MEMBER_ID=? AND STATUS='Y';
+BASKET_FINDBY_INDEX = SELECT * FROM BAKSET WHERE BAKET_INDEX=?
 BASKET_INSERT = INSERT INTO BASKET VALUES(?,DEFAULT,?,DEFAULT,DEFAULT)
 BASKET_DELETE = DELETE FROM BASKET WHERE BASKET_INDEX=?
 BASKET_UPDATE_PRICE = UPDATE BASKET SET TOTAL_PRICE=?
@@ -60,7 +61,7 @@ BASKETDETAIL_GET_PRICE = SELECT GOOD_PRICE FROM BASKET_DETAIL WHERE BD_INDEX=?
 BASKET_DELETE = DELETE FROM BASKET_DETAIL WHERE BASKETDETAIL_INDEX=?
 BASKETDETAIL_UPDATE_QUANTITY = UPDATE BASKET_DETAIL SET QUANTITY=? WHERE BD_INDEX=?
 BASKETDETAIL_COUNT = SELECT COUNT(*) FROM BASKET_DETAIL WHERE BASKET_INDEX=?
-
+BASKET_UPDATE_STATUS = UPDATE BASKET SET STATUS='N' WHERE BASKET_INDEX=?
 
 // ReviewDAO
 REVIEW_INSERT = INSERT INTO REVIEW VALUES(?,?,?,?,DEFAULT,?,?,?)
